# VLM-eval

./: .gitignore  README.md  main.py  pyproject.toml
outputs/InstructBlip/: instructblip_anatomy_eval1.csv  instructblip_modality_eval1.csv  instructblip_mri_anatomy_eval1.csv  instructblip_mri_modality_eval1.csv  instructblip_mri_pathology_eval1.csv  instructblip_mri_view_eval1.csv  instructblip_pathology_eval1.csv  instructblip_view_eval1.csv
outputs/LLava/: llava_anatomy_eval1.csv  llava_modality_eval1.csv  llava_mri_anatomy_eval1.csv  llava_mri_modality_eval1.csv  llava_mri_pathology_eval1.csv  llava_mri_view_eval1.csv  llava_pathology_eval1.csv  llava_view_eval1.csv
outputs/MedGemma/: medgemma_4b_mri_anatomy_eval1.csv  medgemma_4b_mri_modality_eval1.csv  medgemma_4b_mri_pathology_eval1.csv  medgemma_4b_mri_view_eval1.csv  medgemma_anatomy_eval1.csv  medgemma_modality_eval1.csv  medgemma_pathology_eval1.csv  medgemma_view_eval1.csv
outputs/Medgemma27B/: medgemma_27b_mri_anatomy_eval1.csv  medgemma_27b_mri_modality_eval1.csv  medgemma_27b_mri_pathology_eval1.csv  medgemma_27b_mri_view_eval1.csv  medgemma_27b_xray_anatomy_eval1.csv  medgemma_27b_xray_modality_eval1.csv  medgemma_27b_xray_pathology_eval1.csv  medgemma_27b_xray_view_eval1.csv
outputs/Paligemma/: paligemma_anatomy_eval1.csv  paligemma_modality_eval1.csv  paligemma_mri_anatomy_eval1.csv  paligemma_mri_modality_eval1.csv  paligemma_mri_pathology_eval1.csv  paligemma_mri_view_eval1.csv  paligemma_pathology_eval1.csv  paligemma_view_eval1.csv
outputs/Qwen/: qwen_mri_anatomy_eval1.csv  (+7 more)
(+13 files in other folders)
